--- a/notebooks/polars-local.ipynb
+++ b/notebooks/polars-local.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "f06301d0",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "7f7d3bb7",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "89eaaa10",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "└──────────────┴─────────────┴──────────────┴─────────────┴───────────┘"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "26cf006c-5ed9-452d-a073-b610c37fa80f",
    "metadata": {
     "lines_to_next_cell": 2
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "ae62b071",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "fc359528",
    "metadata": {},
    "outputs": [
@@ -355,9 +355,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c19d418e",
+   "metadata": {},
+   "source": [
+    "Creating datetime objects with builtin library. (note that no location is provided by default.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b615aae5",
+   "execution_count": null,
+   "id": "e3a133e8",
    "metadata": {},
    "outputs": [
     {
@@ -380,17 +388,79 @@
     }
    ],
    "source": [
-    "import pendulum\n",
+    "import datetime\n",
     "\n",
     "dfd = pl.DataFrame(\n",
     "    {\n",
     "        \"integer\": [1, 2, 3, 4, 5],\n",
     "        \"date\": [\n",
-    "            pendulum.datetime(2022, 1, 1),\n",
-    "            pendulum.datetime(2022, 1, 2),\n",
-    "            pendulum.datetime(2022, 1, 3),\n",
-    "            pendulum.datetime(2022, 1, 4),\n",
-    "            pendulum.datetime(2022, 1, 5),\n",
+    "            datetime.datetime(2022, 1, 1),\n",
+    "            datetime.datetime(2022, 1, 2),\n",
+    "            datetime.datetime(2022, 1, 3),\n",
+    "            datetime.datetime(2022, 1, 4),\n",
+    "            datetime.datetime(2022, 1, 5),\n",
+    "        ],\n",
+    "        \"float\": [4.0, 5.0, 6.0, 7.0, 8.0],\n",
+    "        \"words\": [\"alpha\", \"beta\", \"gaga\", \"delta\", \"eps\"],\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "print(dfd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3d1847e",
+   "metadata": {},
+   "source": [
+    "Creating a datetime with the arrow module.  Note that we must exclusively convert to a datetime object.  Also note that a 'default' timezone is provided."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b615aae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (5, 4)\n",
+      "┌─────────┬─────────────────────────┬───────┬───────┐\n",
+      "│ integer ┆ date                    ┆ float ┆ words │\n",
+      "│ ---     ┆ ---                     ┆ ---   ┆ ---   │\n",
+      "│ i64     ┆ datetime[μs, UTC]       ┆ f64   ┆ str   │\n",
+      "╞═════════╪═════════════════════════╪═══════╪═══════╡\n",
+      "│ 1       ┆ 2022-01-01 00:00:00 UTC ┆ 4.0   ┆ alpha │\n",
+      "│ 2       ┆ 2022-01-02 00:00:00 UTC ┆ 5.0   ┆ beta  │\n",
+      "│ 3       ┆ 2022-01-03 00:00:00 UTC ┆ 6.0   ┆ gaga  │\n",
+      "│ 4       ┆ 2022-01-04 00:00:00 UTC ┆ 7.0   ┆ delta │\n",
+      "│ 5       ┆ 2022-01-05 00:00:00 UTC ┆ 8.0   ┆ eps   │\n",
+      "└─────────┴─────────────────────────┴───────┴───────┘\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/77/skc_0fn91yld6jpgpm315xy40000gq/T/ipykernel_18381/570647299.py:3: TimeZoneAwareConstructorWarning: Constructing a Series with time-zone-aware datetimes results in a Series with UTC time zone. To silence this warning, you can filter warnings of class TimeZoneAwareConstructorWarning, or set 'UTC' as the time zone of your datatype.\n",
+      "  dfd = pl.DataFrame(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import arrow\n",
+    "\n",
+    "dfd = pl.DataFrame(\n",
+    "    {\n",
+    "        \"integer\": [1, 2, 3, 4, 5],\n",
+    "        \"date\": [\n",
+    "            arrow.get(\"2022-01-01\").datetime,\n",
+    "            arrow.get(\"2022-01-02\").datetime,\n",
+    "            arrow.get(\"2022-01-03\").datetime,\n",
+    "            arrow.get(\"2022-01-04\").datetime,\n",
+    "            arrow.get(\"2022-01-05\").datetime,\n",
     "        ],\n",
     "        \"float\": [4.0, 5.0, 6.0, 7.0, 8.0],\n",
     "        \"words\": [\"alpha\", \"beta\", \"gaga\", \"delta\", \"eps\"],\n",
@@ -402,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "87eef770",
    "metadata": {},
    "outputs": [
@@ -434,8 +504,8 @@
       "│ ---     ┆ ---                 ┆ ---   ┆ ---   │\n",
       "│ i64     ┆ datetime[μs]        ┆ f64   ┆ str   │\n",
       "╞═════════╪═════════════════════╪═══════╪═══════╡\n",
-      "│ 3       ┆ 2022-01-03 00:00:00 ┆ 6.0   ┆ gaga  │\n",
       "│ 1       ┆ 2022-01-01 00:00:00 ┆ 4.0   ┆ alpha │\n",
+      "│ 4       ┆ 2022-01-04 00:00:00 ┆ 7.0   ┆ delta │\n",
       "└─────────┴─────────────────────┴───────┴───────┘\n"
      ]
     }
@@ -448,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "bb715efd",
    "metadata": {},
    "outputs": [
@@ -456,22 +526,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape: (9, 5)\n",
-      "┌────────────┬──────────┬─────────────────────┬──────────┬───────┐\n",
-      "│ describe   ┆ integer  ┆ date                ┆ float    ┆ words │\n",
-      "│ ---        ┆ ---      ┆ ---                 ┆ ---      ┆ ---   │\n",
-      "│ str        ┆ f64      ┆ str                 ┆ f64      ┆ str   │\n",
-      "╞════════════╪══════════╪═════════════════════╪══════════╪═══════╡\n",
-      "│ count      ┆ 5.0      ┆ 5                   ┆ 5.0      ┆ 5     │\n",
-      "│ null_count ┆ 0.0      ┆ 0                   ┆ 0.0      ┆ 0     │\n",
-      "│ mean       ┆ 3.0      ┆ null                ┆ 6.0      ┆ null  │\n",
-      "│ std        ┆ 1.581139 ┆ null                ┆ 1.581139 ┆ null  │\n",
-      "│ min        ┆ 1.0      ┆ 2022-01-01 00:00:00 ┆ 4.0      ┆ alpha │\n",
-      "│ 25%        ┆ 2.0      ┆ null                ┆ 5.0      ┆ null  │\n",
-      "│ 50%        ┆ 3.0      ┆ null                ┆ 6.0      ┆ null  │\n",
-      "│ 75%        ┆ 4.0      ┆ null                ┆ 7.0      ┆ null  │\n",
-      "│ max        ┆ 5.0      ┆ 2022-01-05 00:00:00 ┆ 8.0      ┆ gaga  │\n",
-      "└────────────┴──────────┴─────────────────────┴──────────┴───────┘\n"
+      "Rows: 5\n",
+      "Columns: 4\n",
+      "$ integer          <i64> 1, 2, 3, 4, 5\n",
+      "$ date    <datetime[μs]> 2022-01-01 00:00:00, 2022-01-02 00:00:00, 2022-01-03 00:00:00, 2022-01-04 00:00:00, 2022-01-05 00:00:00\n",
+      "$ float            <f64> 4.0, 5.0, 6.0, 7.0, 8.0\n",
+      "$ words            <str> 'alpha', 'beta', 'gaga', 'delta', 'eps'\n",
+      "\n",
+      "None\n"
      ]
     },
     {
@@ -505,13 +567,13 @@
        "└────────────┴──────────┴─────────────────────┴──────────┴───────┘"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(dfd.describe())\n",
+    "print(dfd.glimpse())\n",
     "dfd.describe()"
    ]
   },
@@ -525,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "c1a4fe49",
    "metadata": {},
    "outputs": [
@@ -580,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1c659c33",
    "metadata": {},
    "outputs": [
@@ -662,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "55e5431d",
    "metadata": {},
    "outputs": [
@@ -735,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6f15d13e",
    "metadata": {},
    "outputs": [
@@ -798,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5d08586c",
    "metadata": {},
    "outputs": [
@@ -857,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8a771542",
    "metadata": {
     "lines_to_next_cell": 2
@@ -916,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "4417f42e",
    "metadata": {},
    "outputs": [
@@ -968,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "4da1d640",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "0182b056",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "37f01420",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "9709dcbf",
    "metadata": {},
    "outputs": [
@@ -1187,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "988cab1f",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "6dd10c26",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "5271ddb7",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "c90414f8",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
